--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <form class="form" id="login" method="post">
             <div class="form__input-group">
-                <input id="url" type="url" class="form__input" autofocus placeholder="JSON URL"><br>
+                <input id="url" type="url" class="form__input" autofocus value="https://raw.githubusercontent.com/DeekshithSH/barchart-racing/public/data.json" placeholder="JSON URL" ><br>
             </div>
             <button class="form__button" type="button" onclick="JSONData();" value="Submit">Continue</button>
         </form>
